# VTK-test

./: ImageSeriesReadWrite.cpp~  ReadWrite.cpp~
DistancePolyDataFilter/: CMakeLists.txt  DistancePolyDataFilter.cxx
Test1/: CMakeCache.txt  VTKPolyDataWriter.cpp
Test2/: WriteVTP.cpp
Test3/: CMakeLists.txt  WriteVTP.cpp  readtxt.cpp
Test4/: CMakeLists.txt  SubtractImageFilter.cxx
Test5/: WriteVTP.cpp
Test6/: WriteVTP.cpp
Triangle-ASD/: CMakeLists.txt  WriteVTP.cpp  readtxt.cpp
Triangle-ASD-2/: CMakeCache.txt  Makefile  WriteVTP.cpp  WriteVTP.cpp~  cmake_install.cmake  glodstandSPHARM_ellalign.vtk  segautoSPHARM_ellalign.vtk  vtkDataSetToImageFilter.h  vtkImplicitPolyData.h
